--- a/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/MemberManagement.css
@@ -1,4 +1,15 @@
-﻿.circle {
+﻿/*登出導覽列*/
+#userName{
+    margin-top:5px;
+}
+#memberNavbar {
+    justify-content: right;
+    align-items: center;
+}
+
+/*修改資料區*/
+/*圖片區*/
+.circle {
     border-radius: 50%; /* 設定圓形 */
     width: 200px;
     height: 200px;
@@ -10,7 +21,9 @@
     height: auto;
 }
 
-.progress-wrapper {
+
+/*進度條*/
+.progressWrapper {
     position: relative;
     width: 100%;
 }
@@ -30,12 +43,95 @@ progress {
         background-color: #ffc107;
     }
 
-.progress-labels {
+.progressLabels {
     display: flex;
     justify-content: space-between;
     margin-top: 5px;
     font-size: 12px;
 }
 
+/*修改與重設button樣式*/
+.btn {
+    border: none;
+    padding: 10px 20px;
+    margin:10px;
+    font-size: 14px;
+    position: relative;
+    background: transparent;
+    color: white;
+    text-transform: uppercase;
+    border: 1px solid #ffa500;
+    cursor: pointer;
+    transition: all 0.7s;
+    overflow: hidden;
+    border-radius: 100px;
+}
 
+    .btn:hover {
+        color: #000;
+    }
 
+span {
+    transition: all 0.7s;
+    z-index: -1;
+}
+
+.btn .first {
+    content: "";
+    position: absolute;
+    right: 100%;
+    top: 0;
+    width: 25%;
+    height: 100%;
+    background: #ffa500;
+}
+
+.btn:hover .first {
+    top: 0;
+    right: 0;
+}
+
+.btn .second {
+    content: "";
+    position: absolute;
+    left: 25%;
+    top: -100%;
+    height: 100%;
+    width: 25%;
+    background: #ffa500;
+}
+
+.btn:hover .second {
+    top: 0;
+    left: 50%;
+}
+
+.btn .third {
+    content: "";
+    position: absolute;
+    left: 50%;
+    height: 100%;
+    top: 100%;
+    width: 25%;
+    background: #ffa500;
+}
+
+.btn:hover .third {
+    top: 0;
+    left: 25%;
+}
+
+.btn .fourth {
+    content: "";
+    position: absolute;
+    left: 100%;
+    top: 0;
+    height: 100%;
+    width: 25%;
+    background: #ffa500;
+}
+
+.btn:hover .fourth {
+    top: 0;
+    left: 0;
+}
