--- a/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
@@ -9,8 +9,10 @@
         }
 
         .toptenimg{
-            width: 200px;
+            width: 400px;
             height: 400px;
+            margin-left: 250px;
+            margin-bottom: 20px;
         }
     </style>
 }
@@ -111,8 +113,8 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-7">
-                                <img src="~/img/specials-1.png" class="toptenimg d-block w-100" alt="Image 1">
+                            <div class="toptenimg col-md-7">
+                                <img src="~/img/specials-1.png" class=" d-block w-100" alt="Image 1">
                             </div>
                             <div class="toptenitem col-md-5">
                                 <h3>推薦餐點 TOP<span style="font-size:35px">  1</span></h3><br>
@@ -125,8 +127,8 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-7">
-                                <img src="~/img/specials-2.png" class="toptenimg d-block w-100" alt="Image 2">
+                            <div class="toptenimg col-md-7">
+                                <img src="~/img/specials-2.png" class="d-block w-100" alt="Image 2">
                             </div>
                             <div class="toptenitem col-md-5">
                                 <h3>推薦餐點 TOP<span style="font-size:35px">  2</span></h3><br>
@@ -139,8 +141,8 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-7">
-                                <img src="~/img/specials-3.png" class="toptenimg d-block w-100" alt="Image 3">
+                            <div class="toptenimg col-md-7">
+                                <img src="~/img/specials-3.png" class="d-block w-100" alt="Image 3">
                             </div>
                             <div class="toptenitem col-md-5">
                                 <h3>推薦餐點 TOP<span style="font-size:35px">  3</span></h3><br>
