--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderForHere/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/OrderForHere/Index.cshtml
@@ -1,6 +1,6 @@
 @section Styles
 {
-	<link href="~/orderforhere/orderforherelogincss/orderforherelogin.min.css" rel="stylesheet" />
+	<link href="~/orderforhere/orderforherelogincss/orderforhere.css" rel="stylesheet" />
 }
 
 <!-- Start  -->
