--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="~/css/style.min.css" rel="stylesheet">
+	<link href="~/css/style.css" rel="stylesheet" />
 
     <!--預設檔案-->
     @*<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />*@
@@ -34,7 +34,7 @@
 </head>
 <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="sticky-top d-flex align-items-center">
+    <header id="header" class="sticky-top d-flex align-items-center" style="width:100%">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
             <h1 class="logo me-auto me-lg-0"><a>享食 Enjoy Eat</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
