--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -47,11 +47,11 @@
                     <li><a class="nav-link scrollto" asp-controller="Menu" asp-action="Index">菜單</a></li>
                     <li><a class="nav-link scrollto" asp-area="" asp-controller="Home" asp-action="News">最新消息</a></li>
                     <li><a class="nav-link scrollto" href="">訂位</a></li>
-                    <li><a class="nav-link scrollto" asp-area="OrderForHere" asp-controller="OrderForHere" asp-action="Index">內用點餐</a></li>
+                    <li><a class="nav-link scrollto" asp-area="OrderForHere" asp-controller="OrderLogin" asp-action="Index">內用點餐</a></li>
                     <li><a class="nav-link scrollto" asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index">後臺管理</a></li>
                     <li><a class="nav-link scrollto" href="">外帶訂餐</a></li>
                     <li><a class="nav-link scrollto" href="">聯絡我們</a></li>
-                    <li><a class="nav-link scrollto"asp-controller="MemberLogin" asp-action="Index">會員登入</a></li>
+                    <li><a class="nav-link scrollto" asp-controller="MemberLogin" asp-action="Index">會員登入</a></li>
                     <li><a class="nav-link scrollto" asp-controller="MemberManagement" asp-action="Index">會員管理</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
